[package]
name = "pgsl"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.5.4"
pest_derive = "2.5.5"
clap = { version = "4.1.4", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
anyhow = "1.0.69"
regex = "1.7.1"
lazy_static = "1.4.0"
log = "0.4.27"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
